<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:takeout="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_groups"
        android:icon="@drawable/ic_menu_moreoverflow_normal"
        android:title="@string/action_overflow"
        takeout:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settins"
                android:title="@string/action_settings"
                takeout:showAsAction="ifRoom"/>
            <item
                android:id="@+id/action_feedback"
                android:title="@string/action_feedback"
                takeout:showAsAction="ifRoom"/>
            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"
                takeout:showAsAction="ifRoom"/>
            <item
                android:id="@+id/action_cooperation"
                android:title="@string/action_cooperation"
                takeout:showAsAction="ifRoom"/>
        </menu>
    </item>

</menu>