<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tips_profile"
            android:textColor="@color/actionbar_title_color"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rigister_edt_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_box_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="8dp"
                android:text="@string/school_locale"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/locale_spr"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rigister_edt_height"
            android:background="@drawable/round_box_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="8dp"
                android:text="@string/dormitory"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dormitory_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_dormitory"
                android:maxLength="10"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/main_color"
                android:textSize="@dimen/rigister_edt_hint_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rigister_edt_height"
            android:background="@drawable/round_box_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="8dp"
                android:text="@string/bedroom"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/bedroom_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_bedroom"
                android:inputType="number"
                android:maxLength="3"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/main_color"
                android:textSize="@dimen/rigister_edt_hint_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/next_to_moblie_btn"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_login_btn"
            android:text="@string/next_step"
            android:textColor="@color/main_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rigister_edt_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_box_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="8dp"
                android:text="@string/account"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@id/account_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_account"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/main_color"
                android:textScaleX="1"
                android:textSize="@dimen/rigister_edt_hint_text_size" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tips_phone"
            android:textColor="@color/actionbar_title_color"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tips_get_verify_code"
            android:textColor="@color/actionbar_title_color"
            android:textSize="12sp" />

        <Button
            android:id="@+id/next_to_signup_btn"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_login_btn"
            android:text="@string/next_step"
            android:textColor="@color/main_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_verify_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tips_verify_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tips_send_verify_code"
            android:textColor="@color/actionbar_title_color"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rigister_edt_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_box_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="8dp"
                android:text="@string/verify"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/verify_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_verify"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/main_color"
                android:textScaleX="1"
                android:textSize="@dimen/rigister_edt_hint_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rigister_edt_height"
            android:background="@drawable/round_box_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="8dp"
                android:text="@string/password"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/main_color"
                android:textSize="@dimen/rigister_edt_hint_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/check_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_check_box"
                android:checked="true" />

            <TextView
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocol"
                android:textColor="@color/actionbar_title_color"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_login_btn"
            android:text="@string/signup"
            android:textColor="@color/main_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>