<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <ImageView
        android:id="@+id/app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app"
        android:layout_centerHorizontal="true"
        android:text="@string/app_declare"
        android:textColor="@color/actionbar_title_color"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/background_top"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/account"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/account_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_account"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/main_color"
                android:textColorHint="@color/grey_text_color"
                android:textScaleX="1.2"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/background_white_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/password"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/main_color"
                android:textColorHint="@color/grey_text_color"
                android:textScaleX="1.2"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="210dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_login_btn"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/main_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/forgot_password_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_transparent_to_30_bg"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/actionbar_title_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sing_up_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_transparent_to_30_bg"
            android:gravity="center"
            android:text="@string/register_account"
            android:textColor="@color/actionbar_title_color"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>